crates/vue_oxc_toolkit/src/parser/snapshots/module_record/modules_setup_vue.snap
---
source: crates/vue_oxc_toolkit/src/test.rs
expression: result
---
Module Record: ModuleRecord {
    has_module_syntax: true,
    requested_modules: HashMap(
        ManuallyDrop {
            value: {
                "vue": Vec(
                    [
                        RequestedModule {
                            statement_span: Span {
                                start: 57,
                                end: 83,
                            },
                            span: Span {
                                start: 77,
                                end: 82,
                            },
                            is_type: false,
                            is_import: true,
                        },
                    ],
                ),
            },
        },
    ),
    import_entries: Vec(
        [
            ImportEntry {
                statement_span: Span {
                    start: 57,
                    end: 83,
                },
                module_request: NameSpan {
                    span: Span {
                        start: 77,
                        end: 82,
                    },
                    name: "vue",
                },
                import_name: Name(
                    NameSpan {
                        span: Span {
                            start: 66,
                            end: 69,
                        },
                        name: "ref",
                    },
                ),
                local_name: NameSpan {
                    span: Span {
                        start: 66,
                        end: 69,
                    },
                    name: "ref",
                },
                is_type: false,
            },
        ],
    ),
    local_export_entries: Vec(
        [
            ExportEntry {
                span: Span {
                    start: 100,
                    end: 102,
                },
                statement_span: Span {
                    start: 85,
                    end: 102,
                },
                module_request: None,
                import_name: Null,
                export_name: Default(
                    Span {
                        start: 92,
                        end: 99,
                    },
                ),
                local_name: Null,
                is_type: false,
            },
        ],
    ),
    indirect_export_entries: Vec(
        [],
    ),
    star_export_entries: Vec(
        [],
    ),
    exported_bindings: HashMap(
        ManuallyDrop {
            value: {},
        },
    ),
    dynamic_imports: Vec(
        [],
    ),
    import_metas: Vec(
        [],
    ),
}
